# pystarter

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: check.yml
migrations/: env.py
migrations/versions/: 8c64af0fa6c7_first.py
src/pystarter/: __main__.py  config.py  server.py
src/pystarter/database/: __init__.py  base.py  user.py
tests/: conftest.py  test_server.py
tests/database/: test_base.py  test_user.py
