[tool.poetry]
name = "pystarter"
version = "0.1.0"
description = ""
authors = ["Mauro Insacco <mauro.insacco@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
fastapi = "^0.95.1"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
sqlalchemy = "^2.0.9"
aiosqlite = "^0.19.0"
httpx = "^0.24.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.261"
black = "^23.3.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
isort = "^5.12.0"
alembic = "^1.10.3"

[tool.black]
line-length = 88

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
implicit_reexport = true
pretty = true
show_error_codes = true
show_error_context = true
strict = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
disable_error_code = 'type-arg, empty-body'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
